feat(search): add search endpoint
