# src/main/java/com/diegchav/staywise/api/controller/SearchController.java
@@ -1,0 +1,39 @@
+package com.diegchav.staywise.api.controller;
+
+import com.diegchav.staywise.api.dto.SearchResponse;
+import com.diegchav.staywise.service.SearchService;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/api/search")
+public class SearchController {
+    private final SearchService service;
+
+    public SearchController(SearchService service) {
+        this.service = service;
+    }
+
+    @GetMapping
+    public Page<SearchResponse> search(
+            @RequestParam(required = false) String q,
+            @RequestParam(required = false) String city,
+            @RequestParam(required = false) String country,
+            @RequestParam(required = false) Double minRating,
+            @RequestParam(required = false) Double maxRating,
+            Pageable pageable
+    ) {
+        return service.search(
+                q,
+                city,
+                country,
+                minRating,
+                maxRating,
+                pageable
+        );
+    }
+}
