# src/main/java/com/diegchav/staywise/api/dto/SearchResponse.java
@@ -1,0 +1,9 @@
+package com.diegchav.staywise.api.dto;
+
+public record SearchResponse(
+        String hotelId,
+        String name,
+        String city,
+        String country,
+        Double rating
+) {}
